--- a/server/.babelrc
+++ b/server/.babelrc
@@ -3,7 +3,9 @@
     "es2015",
     "env"
   ],
-  "plugins": ["transform-object-rest-spread"],
+  "plugins": ["transform-object-rest-spread", ["transform-runtime", {
+    "regenerator": true
+  }]],
   "ignore": [
     "node_modules"
   ]
