--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
   "author": "amazingandyyy",
   "license": "MIT",
   "devDependencies": {
+    "antd": "^3.25.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.2",
+    "babel-plugin-import": "^1.12.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
