--- a/client/package.json
+++ b/client/package.json
@@ -12,28 +12,24 @@
   "author": "amazingandyyy",
   "license": "MIT",
   "devDependencies": {
-    "antd": "^3.25.2",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-import": "^1.12.2",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2017": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "html-webpack-plugin": "^2.30.1",
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-react": "^7.0.0",
+    "antd": "3.25.3",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-import": "^1.13.0",
+    "css-loader": "3.2.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-webpack-plugin": "3.2.0",
     "husky": "^0.14.3",
     "node-sass": "^4.12.0",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "8.0.0",
     "serve": "^9.4.0",
-    "style-loader": "^0.20.1",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.11.5",
-    "webpack-merge": "^4.1.0"
+    "style-loader": "1.0.0",
+    "webpack": "4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "3.9.0",
+    "webpack-merge": "4.2.2"
   },
   "dependencies": {
     "axios": "^0.19.0",
