--- a/server/.babelrc
+++ b/server/.babelrc
@@ -1,11 +1,6 @@
 { 
-  "presets": [
-    "es2015",
-    "env"
-  ],
-  "plugins": ["transform-object-rest-spread", ["transform-runtime", {
-    "regenerator": true
-  }]],
+  "presets": ["@babel/preset-env"],
+  "plugins": ["@babel/plugin-transform-runtime"],
   "ignore": [
     "node_modules"
   ]
