--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["@babel/env", "@babel/react"],
-  "plugins": [["import", { "libraryName": "antd", "style": "css" }]]
+  "plugins": ["@babel/plugin-transform-runtime", ["import", { "libraryName": "antd", "style": "css" }]]
 }
