--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.1.6",
-    "@babel/preset-env": "^7.1.6",
+    "@babel/plugin-transform-runtime": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.0.0",
     "antd": "3.25.3",
     "babel-loader": "^8.0.4",
@@ -23,6 +24,7 @@
     "html-webpack-plugin": "3.2.0",
     "husky": "^0.14.3",
     "node-sass": "^4.12.0",
+    "redux-logger": "^3.0.6",
     "sass-loader": "8.0.0",
     "serve": "^9.4.0",
     "style-loader": "1.0.0",
@@ -32,6 +34,7 @@
     "webpack-merge": "4.2.2"
   },
   "dependencies": {
+    "@babel/runtime": "^7.7.4",
     "axios": "^0.19.0",
     "prop-types": "^15.6.0",
     "react": "^16.8.6",
