--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "author": "amazingandyyy",
   "license": "MIT",
   "devDependencies": {
+    "@ant-design/icons": "^4.2.1",
     "@babel/core": "^7.1.6",
     "@babel/plugin-transform-runtime": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
